k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: powerlifting-coach
  labels:
    name: powerlifting-coach
